force-app/main/default/objects/Inventaire__c/fields/Benefice__c.field-meta.xml
<CustomField>
    <fullName>Benefice__c</fullName>
    <formula>Montant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Benefice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>