force-app/main/default/objects/Inventaire__c/fields/ConsommationMoyenneMensuel__c.field-meta.xml
<CustomField>
    <fullName>ConsommationMoyenneMensuel__c</fullName>
    <formula>Benefice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consommation Moyenne Mensuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>