force-app/main/default/objects/Inventaire__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <description>Champs représentant le nom de l&apos;inventaire</description>
    <label>Montant</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>